--- a/ERP_backend/appsettings.Development.json
+++ b/ERP_backend/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Database=erp;Username=erp;Password=secret"
   }
 }
