--- a/ERP_backend/ERP_ASP_dotnet/appsettings.Development.json
+++ b/ERP_backend/ERP_ASP_dotnet/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Database=erp;Username=erp;Password=secret"
+    "Default": "Host=erp-khuong-dev-2.postgres.database.azure.com;Port=5432;Database=postgres;Username=phapeee;Password=Khuong12!;Ssl Mode=Require;Trust Server Certificate=true"
   }
 }
