--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: postgres:16
+        image: postgres:17
         env:
           POSTGRES_USER: erp_ci
           POSTGRES_PASSWORD: secret
@@ -46,7 +46,6 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.x'
-          include-prerelease: true
 
       - name: Install dotnet-ef tool
         run: |
@@ -103,6 +102,11 @@ jobs:
     name: API Tests (Postman)
     runs-on: ubuntu-latest
     needs: backend
+    env:
+      DOTNET_NOLOGO: true
+      DOTNET_CLI_TELEMETRY_OPTOUT: 1
+      DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+      DB_CONNECTION_STRING: Host=localhost;Port=5432;Database=erp_ci;Username=erp_ci;Password=secret;Ssl Mode=Disable
     services:
       postgres:
         image: postgres:17
@@ -125,7 +129,11 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.x'
-          include-prerelease: true
+
+      - name: Install dotnet-ef tool
+        run: |
+          dotnet tool install --global dotnet-ef
+          echo "$HOME/.dotnet/tools" >> "$GITHUB_PATH"
 
       - name: Restore backend dependencies
         working-directory: ERP_backend
@@ -134,6 +142,10 @@ jobs:
       - name: Build backend
         working-directory: ERP_backend
         run: dotnet build ERP-Inventory-Management-System.sln --configuration Release --no-restore
+
+      - name: Apply EF Core migrations
+        working-directory: ERP_backend
+        run: dotnet ef database update --project ERP_ASP_dotnet/ERP_backend.csproj --startup-project ERP_ASP_dotnet/ERP_backend.csproj
 
       - name: Start API
         working-directory: ERP_backend
