Backend: Added auto warning suppression

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,8 +25,48 @@
     },
     {
       "label": "Dev: start Frontend + Backend",
-      "dependsOn": ["dotnet: watch ERP_backend", "npm: start - ERP_frontend", "npm: postgresql"],
+      "dependsOn": [
+        "dotnet: watch ERP_backend",
+        "npm: start - ERP_frontend",
+        "npm: postgresql"
+      ],
       "dependsOrder": "parallel"
+    },
+    {
+      "label": "build",
+      "command": "dotnet",
+      "type": "process",
+      "args": [
+        "build",
+        "${workspaceFolder}/ERP_backend/ErpApi/ERP_backend.csproj",
+        "/property:GenerateFullPaths=true",
+        "/consoleloggerparameters:NoSummary;ForceNoAlign"
+      ],
+      "problemMatcher": "$msCompile"
+    },
+    {
+      "label": "publish",
+      "command": "dotnet",
+      "type": "process",
+      "args": [
+        "publish",
+        "${workspaceFolder}/ERP_backend/ErpApi/ERP_backend.csproj",
+        "/property:GenerateFullPaths=true",
+        "/consoleloggerparameters:NoSummary;ForceNoAlign"
+      ],
+      "problemMatcher": "$msCompile"
+    },
+    {
+      "label": "watch",
+      "command": "dotnet",
+      "type": "process",
+      "args": [
+        "watch",
+        "run",
+        "--project",
+        "${workspaceFolder}/ERP_backend/ErpApi/ERP_backend.csproj"
+      ],
+      "problemMatcher": "$msCompile"
     }
   ]
 }
