--- a/ERP_backend/ErpXunit/ErpXunit.csproj
+++ b/ERP_backend/ErpXunit/ErpXunit.csproj
@@ -4,7 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ERP_xUnit_dotnet</RootNamespace>
+    <RootNamespace>ErpXunit</RootNamespace>
     <TargetFramework>net9.0</TargetFramework>
     <!--
     This template uses native xUnit.net command line options when using 'dotnet run' and
