--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,10 +61,10 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Restore dependencies
-        run: dotnet restore ERP-Inventory-Management-System.sln
+        run: dotnet restore
 
       - name: Apply EF Core migrations
-        run: dotnet ef database update --project ErpApi/ERP_backend.csproj --startup-project ErpApi/ERP_backend.csproj
+        run: dotnet ef database update --project ErpApi/ErpApi.csproj --startup-project ErpApi/ErpApi.csproj
 
       - name: Build (with analyzers)
         run: dotnet build ERP-Inventory-Management-System.sln --configuration Release --no-restore /p:AnalysisMode=AllEnabledByDefault /p:TreatWarningsAsErrors=true
@@ -145,14 +145,14 @@ jobs:
 
       - name: Apply EF Core migrations
         working-directory: ERP_backend
-        run: dotnet ef database update --project ErpApi/ERP_backend.csproj --startup-project ErpApi/ERP_backend.csproj
+        run: dotnet ef database update --project ErpApi/ErpApi.csproj --startup-project ErpApi/ErpApi.csproj
 
       - name: Start API
         working-directory: ERP_backend
         env:
           DB_CONNECTION_STRING: Host=localhost;Port=5432;Database=erp_ci;Username=erp_ci;Password=secret;Ssl Mode=Disable
         run: |
-          dotnet run --project ErpApi/ERP_backend.csproj --configuration Release --no-launch-profile --urls http://0.0.0.0:5050 &
+          dotnet run --project ErpApi/ErpApi.csproj --configuration Release --no-launch-profile --urls http://0.0.0.0:5050 &
           echo $! > api.pid
           for attempt in {1..30}; do
             if curl -fsS http://127.0.0.1:5050/health > /dev/null 2>&1; then
