--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,7 +151,7 @@ jobs:
 
       - name: Apply EF Core migrations
         working-directory: ERP_backend
-        run: dotnet ef database update --project ErpApi/ErpApi.csproj --startup-project ErpApi/ErpApi.csproj --no-build
+        run: dotnet ef database update --project ErpApi/ErpApi.csproj --startup-project ErpApi/ErpApi.csproj --configuration Release --no-build
 
       - name: Start API
         working-directory: ERP_backend/ErpApi/bin/Release/net9.0
