--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  backend-build:
+  backend-analysis:
     name: Build and Analyze .NET with SonarQube
     runs-on: ubuntu-latest
     env:
@@ -41,13 +41,14 @@ jobs:
           mkdir -p ./.sonar/scanner
           dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
       - name: Build and analyze
+        working-directory: ERP_backend
         env:
           SONAR_HOST_URL: ${{ env.SONAR_HOST_URL }}
           SONAR_TOKEN: ${{ env.SONARQUBE_CS_API_KEY }}
         run: |
-          ./.sonar/scanner/dotnet-sonarscanner begin /k:"ERP-IMS" /d:sonar.token=$SONAR_TOKEN /d:sonar.host.url=$SONAR_HOST_URL
-          dotnet build ERP_backend/ERP-Inventory-Management-System.sln --configuration Release
-          ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.token=$SONAR_TOKEN
+          ../.sonar/scanner/dotnet-sonarscanner begin /k:"ERP-IMS" /d:sonar.token=$SONAR_TOKEN /d:sonar.host.url=$SONAR_HOST_URL
+          dotnet build ERP-Inventory-Management-System.sln --configuration Release
+          ../.sonar/scanner/dotnet-sonarscanner end /d:sonar.token=$SONAR_TOKEN
 
   frontend-analysis:
     name: Build and Analyze Angular TS/JS with SonarQube
@@ -61,3 +62,5 @@ jobs:
         env:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
           SONAR_TOKEN: ${{ secrets.SONARQUBE_TSJS_API_KEY }}
+        with:
+          projectBaseDir: ERP_frontend
