--- a/ERP_frontend/package.json
+++ b/ERP_frontend/package.json
@@ -44,11 +44,8 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.9.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2"
+    "jsdom": "^27.0.0",
+    "typescript": "~5.9.2",
+    "vitest": "^3.2.4"
   }
 }
