Frontend: Installed and setup Vitest, Updated PlayWright

--- a/ERP_frontend/angular.json
+++ b/ERP_frontend/angular.json
@@ -21,7 +21,9 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "src/styles.css"
+            ],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
@@ -68,12 +70,7 @@
           "builder": "@angular/build:extract-i18n"
         },
         "test": {
-          "builder": "@angular/build:unit-test",
-          "options": {
-            "tsConfig": "tsconfig.spec.json",
-            "runner": "vitest",
-            "buildTarget": "ERP_frontend:build:development"
-          }
+          "builder": "@analogjs/vitest-angular:test"
         }
       }
     }
