--- a/ERP_frontend/package.json
+++ b/ERP_frontend/package.json
@@ -6,8 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:ERP_frontend": "node dist/ERP_frontend/server/server.mjs"
+    "serve:ssr:ERP_frontend": "node dist/ERP_frontend/server/server.mjs",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "e2e": "playwright test",
+    "e2e:headed": "playwright test --headed"
   },
   "prettier": {
     "printWidth": 100,
@@ -23,29 +26,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/platform-server": "^20.3.0",
-    "@angular/router": "^20.3.0",
-    "@angular/ssr": "^20.3.3",
+    "@angular/common": "^20.3.3",
+    "@angular/compiler": "^20.3.3",
+    "@angular/core": "^20.3.3",
+    "@angular/forms": "^20.3.3",
+    "@angular/platform-browser": "^20.3.3",
+    "@angular/platform-server": "^20.3.3",
+    "@angular/router": "^20.3.3",
+    "@angular/ssr": "^20.3.4",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.3",
-    "@angular/cli": "^20.3.3",
-    "@angular/compiler-cli": "^20.3.0",
+    "@analogjs/platform": "^1.21.2",
+    "@analogjs/vite-plugin-angular": "^1.21.2",
+    "@analogjs/vitest-angular": "^1.21.2",
+    "@angular-devkit/build-angular": "^20.3.4",
+    "@angular/build": "^20.3.4",
+    "@angular/cli": "^20.3.4",
+    "@angular/compiler-cli": "^20.3.3",
+    "@angular/localize": "^20.3.3",
+    "@nx/devkit": "^21.6.3",
+    "@nx/vite": "^21.0.0",
     "@playwright/test": "^1.55.1",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "jasmine-core": "~5.9.0",
     "jsdom": "^27.0.0",
     "typescript": "~5.9.2",
-    "vitest": "^3.2.4"
+    "vite": "^6.0.0",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^3.2.4",
+    "zone.js": "^0.15.1"
   }
 }
