--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,7 @@ jobs:
     defaults:
       run:
         working-directory: ERP_frontend
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -94,17 +95,57 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: npm
+          cache: "npm"
           cache-dependency-path: ERP_frontend/package-lock.json
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run unit tests
-        run: npm test -- --watch=false --browsers=ChromeHeadless
+      # ---------- Unit tests (Vitest) ----------
+      # If using Angular's experimental Vitest runner:
+      - name: Unit tests (Vitest via ng)
+        run: npx ng test --watch=false
+
+      # If using AnalogJS/manual Vitest instead, replace the step above with:
+      # - name: Unit tests (Vitest direct)
+      #   run: npm run test:run
+
+      - name: Upload Vitest coverage
+        if: always() && hashFiles('ERP_frontend/coverage/**') != ''
+        uses: actions/upload-artifact@v4
+        with:
+          name: vitest-coverage
+          path: ERP_frontend/coverage
+
+      # ---------- Playwright (E2E) ----------
+      - name: Cache Playwright
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      - name: E2E tests (Playwright)
+        run: npx playwright test
 
       - name: Build
         run: npm run build
+
+      - name: Upload Playwright report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: ERP_frontend/playwright-report
+
+      - name: Upload Playwright traces
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-traces
+          path: ERP_frontend/test-results
 
   trivy:
     name: Trivy Scan (${{ matrix.target }})
